--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 									<!-- 	Note that this links to #about, which will move the page to wherever
 										the element with the id "about" exists.
 									-->
-									<a href="#about">About Me</a>
+									<a href="#about">What is...</a>
 								</li>
 								<li>
-									<a href="#research">Research</a>
+									<a href="#research">Reading</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="#community">Writing</a>
 								</li>
 								<li>
-									<a href="#contact">Contact</a>
+									<a href="#contact">Research</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
