--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									First Last
+									Computer Science and Software/Game Development
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
