--- a/index.html
+++ b/index.html
@@ -71,16 +71,22 @@
 									<!-- 	Note that this links to #about, which will move the page to wherever
 										the element with the id "about" exists.
 									-->
-									<a href="#about">What is...</a>
+									<a href="#what_is">What is...</a>
 								</li>
 								<li>
-									<a href="#research">Reading</a>
+									<a href="#reading">Reading</a>
 								</li>
 								<li>
-									<a href="#community">Writing</a>
+									<a href="#writing">Writing</a>
 								</li>
 								<li>
-									<a href="#contact">Research</a>
+									<a href="#research">Research</a>
+								</li>
+								<li>
+									<a href="#quality">Quality of Life</a>
+								</li>
+								<li>
+									<a href="#other">Other</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
@@ -97,8 +103,8 @@
 						<!-- 	Here is the "About Me" card. Note it has the id "about", which the previous 
 							button links to.
 						-->
-						<article id="about">
-							<h2 class="major">About Me</h2>
+						<article id="what_is">
+							<h2 class="major">What is...</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
 								<img src="images/pic01.jpg" alt=""/>
@@ -117,8 +123,8 @@
 						</article>
 
 						<!-- Here is the "Research" card. -->
-						<article id="research">
-							<h2 class="major">Research</h2>
+						<article id="reading">
+							<h2 class="major">Reading</h2>
 							<span class="image main">
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
@@ -134,8 +140,8 @@
 						</article>
 
 						<!-- Here is the "Community" card. -->
-						<article id="community">
-							<h2 class="major">Community</h2>
+						<article id="writing">
+							<h2 class="major">Writing</h2>
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
@@ -151,8 +157,8 @@
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
-						<article id="contact">
-							<h2 class="major">Contact</h2>
+						<article id="research">
+							<h2 class="major">Research</h2>
 							<p> 
 								<b>Email:</b> 
 							</p>
@@ -203,6 +209,38 @@
 									</a>
 								</li> -->
 							</ul>
+						</article>
+						
+						<article id="quality">
+							<h2 class="major">Quality of Life</h2>
+							<span class="image main">
+								<img src="images/pic02.jpg" alt=""/>
+							</span>
+							<p>
+								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
+									the next line.
+								-->
+								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+							</p>
+							<p>
+								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+							</p>
+						</article>
+
+						<article id="other">
+							<h2 class="major">Other</h2>
+							<span class="image main">
+								<img src="images/pic02.jpg" alt=""/>
+							</span>
+							<p>
+								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
+									the next line.
+								-->
+								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+							</p>
+							<p>
+								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+							</p>
 						</article>
 					</div>
 
