--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									WRA195H <br> Remix Project
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a>
+									<a href="images/Astronomy.jpg" target="_blank">References</a>
 								</p>
 							</div>
 						</div>
@@ -83,7 +83,7 @@
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#quality">Quality of Life</a>
+									<a href="#quality">Quality</a>
 								</li>
 								<li>
 									<a href="#other">Other</a>
