--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Astronomy.jpg" target="_blank">References</a>
+									<a href="reference.txt" target="_blank">References</a>
 								</p>
 							</div>
 						</div>
