--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								<b>What is Computer Science?:</b>
 							</p>
 							<p>
-								<b>Research Interests:</b>
+								<b>What is Software Development:</b>
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>What is Game Development?:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
 							</p>
 						</article>
 
