--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@ Cras nec dolor eget risus mollis viverra. Vestibulum commodo lectus et lacus feu
 								<b>What is Software Development:</b>
 							</p>
 							<p>
-								<b>What is Game Development?:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>What is Game Development?:</b> <p>Video game development is the study of and creation of video games in any form. Video game development can be the making of the music of the game, the sound effects of the game, the visual art of the game, the coding of the game, the game design of the game, the playtesting of the game, etc. Most games are made in a group of specialists of each category mentioned, but there have been games made by just one person doing all the work necessary to make a game. </p>
+								<a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
 							</p>
 						</article>
 
