--- a/index.html
+++ b/index.html
@@ -113,22 +113,16 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>What is Computer Science?:</b>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sagittis elementum risus, ac malesuada tellus tempus ac. In scelerisque neque et purus congue, in venenatis lacus interdum. Maecenas iaculis scelerisque orci, nec semper ligula congue eu. Donec porta commodo justo facilisis placerat. Vivamus ac tortor tempor, varius massa et, pharetra velit. Maecenas ultricies placerat nisi, vitae rhoncus arcu faucibus id. Morbi fringilla mauris eros, ut imperdiet ante bibendum at. Donec ullamcorper, lectus in suscipit malesuada, neque orci condimentum ante, nec ultricies ligula mauris in velit. Fusce eget dui nisl. Donec efficitur eleifend tristique. Quisque eget nisi finibus, dictum ligula sit amet, mollis sapien. Pellentesque eu mi non sapien efficitur faucibus.
-
-Maecenas a lectus et ex ullamcorper rhoncus. In pulvinar eros vitae velit dictum, id feugiat purus imperdiet. Donec ante nibh, varius vitae urna quis, malesuada euismod velit. Aenean vitae ex ac augue tincidunt porta et ac sem. Suspendisse ac malesuada turpis. Proin in turpis ac mauris dictum ultrices vel et arcu. Suspendisse hendrerit augue in justo tempus, sed tincidunt justo condimentum. Cras iaculis sollicitudin felis, nec mollis eros ullamcorper id. Nulla vel tortor commodo, lacinia augue nec, auctor ex. Sed ac viverra nisi, at volutpat neque. Pellentesque euismod diam eu odio facilisis, sit amet euismod neque convallis. Aliquam semper tortor metus, ut mattis turpis porttitor nec. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin rutrum non tortor at imperdiet. Praesent sed malesuada dolor. Duis porttitor dignissim malesuada.
-
-Quisque luctus orci non posuere porta. Vestibulum malesuada finibus lobortis. Aenean ornare dapibus mi scelerisque pharetra. Vivamus vitae volutpat libero. Sed interdum, dui eu molestie lacinia, felis risus convallis metus, vitae scelerisque odio nibh id erat. Sed eu leo sodales, mollis neque ac, interdum leo. Proin ac urna aliquet, efficitur magna vitae, rutrum augue. In sodales nisi eu luctus commodo.
-
-Ut rhoncus, dolor vel aliquam laoreet, eros velit pretium purus, non rhoncus dolor nisi eget tellus. Donec pellentesque sollicitudin massa, pulvinar eleifend augue dapibus id. Curabitur ut odio sed urna egestas pretium. Vestibulum et nibh a nisl tristique consequat ac et massa. Maecenas accumsan bibendum dolor, et sollicitudin lacus sodales a. Phasellus imperdiet aliquet efficitur. Maecenas ex quam, ornare ut commodo vitae, sollicitudin in lacus. Integer eu posuere quam, eget fermentum tortor. Nunc dignissim ornare mi, at porta sapien rutrum ut.
-
-Cras nec dolor eget risus mollis viverra. Vestibulum commodo lectus et lacus feugiat, eu laoreet sem fringilla. Aliquam non enim eu velit aliquet tempor. Ut eget odio at mi luctus congue. Pellentesque vel tempus nisl. Duis et est eget massa sollicitudin egestas non tempus metus. Ut lobortis justo lacus, in suscipit est cursus eu. Vestibulum aliquam dui purus. Nam sed pulvinar lorem, non consequat libero. Mauris scelerisque augue ac ligula suscipit tristique. Aliquam dignissim vestibulum nibh a imperdiet. Mauris mattis purus in enim posuere condimentum. Integer lacinia rutrum consectetur. Aliquam sed pellentesque quam. Maecenas sapien sapien, faucibus non nibh sit amet, tristique porta mi. Fusce condimentum lectus in ligula lacinia accumsan.</p>
+								Computer Science is the study of computers and computational systems. Computer scientists design and analyze algorithms to solve programs and study the performance of computer hardware and software. The problems that computer scientists encounter range from the abstract-- determining what problems can be solved with computers and the complexity of the algorithms that solve them – to the tangible – designing applications that perform well on handheld devices, that are easy to use, and that uphold security measures. [5] 
 							</p>
+							
 							<p>
 								<b>What is Software Development:</b>
+								Software development is a broad term that envelops all professional works that involve the process of design, development, deployment, and maintenance of software applications. The term “software development,” encompasses both the theory and the actual writing, testing, debugging, crowdsourcing, etc. associated with the development of software [3]. Sub-disciplines of software development are practically part of all our everyday lives in some way or another. 
 							</p>
-							<p>
-								<b>What is Game Development?:</b> <p>Video game development is the study of and creation of video games in any form. Video game development can be the making of the music of the game, the sound effects of the game, the visual art of the game, the coding of the game, the game design of the game, the playtesting of the game, etc. Most games are made in a group of specialists of each category mentioned, but there have been games made by just one person doing all the work necessary to make a game. </p>
-								<a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+							
+							<p><b>What is Game Development?:</b> 
+							Video game development is the study of and creation of video games in any form. Video game development can be the making of the music of the game, the sound effects of the game, the visual art of the game, the coding of the game, the game design of the game, the playtesting of the game, etc. Most games are made in a group of specialists of each category mentioned, but there have been games made by just one person doing all the work necessary to make a game. 
 							</p>
 						</article>
 
