--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<h2 class="major">What is...</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/what_is_visual.jpeg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
