--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<article id="reading">
 							<h2 class="major">Reading</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/reading_visual.jpeg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
