--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 						<article id="other">
 							<h2 class="major">Other</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/other_visual.jpg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
