--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
 						<!-- Here is a the "Contact" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2>
+							<span class="image main">
+								<img src="images/research_visual.jpg" alt=""/>
+							</span>
 							<p> 
 								<b>Research in Computer Science:</b><be>
 								Research is important in computer science because it allows computer scientists across the world to find and share new discoveries in the field. Research is done on a variety of topics, including security, big data, systems, software engineering, machine learning, data sciences, and robotics [7]. Sites like “ArXiv”, “MIT Technology Review” or the “OpenAI Blog” are some of the websites used to get updates on the recent developments in coding. Since there is such a variety of problems that computer science tackles, research into other related fields: neuroscience, philosophy, ethics, etc. 
